# BACstopper

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml  requirements.txt
bactrack/: __init__.py  api_client.py  cli.py  client.py  server.py  ui.py
deploy/macos/: Info.plist  build_app.py  server_entry.py
deploy/macos/BACstop Server.app/Contents/MacOS/: BACstopServer
hooks/: bacstop-hook
tests/: __init__.py  test_api_client.py  test_client.py  test_server.py  test_ui.py
